fix overflow of some divs and get user data

--- a/frontend/WEB-client/src/app/modules/event/components/event-data/event-data.component.scss
+++ b/frontend/WEB-client/src/app/modules/event/components/event-data/event-data.component.scss
@@ -47,6 +47,7 @@ $containerColor: #e9e9e9;
     height: 60vh;
     background-color: $containerColor;
     border-radius: 1vh;
+    overflow-y: scroll;
 }
 
 .timePlace{
